<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.arvention.neoroutecollector.activity.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/sign_up_icon_container"
            android:layout_width="match_parent"
            android:layout_height="160dp"

            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"

            android:background="@drawable/border">

            <ImageView
                android:id="@+id/sign_up_icon"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"

                android:src="@drawable/neoroute_icon_text_beside"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sign_up_form_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/sign_up_icon_container"

            android:background="@color/colorBackground">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_text_input_layout_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/sign_up_edit_text_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textCapWords|textPersonName"
                    android:hint="@string/firstname"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_text_input_layout_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/sign_up_text_input_layout_firstname" >

                <EditText
                    android:id="@+id/sign_up_edit_text_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textCapWords|textPersonName"
                    android:hint="@string/lastname"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_text_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/sign_up_text_input_layout_lastname" >

                <EditText
                    android:id="@+id/sign_up_edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_text_input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/sign_up_text_input_layout_email"
                >

                <EditText
                    android:id="@+id/sign_up_edit_text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPersonName"
                    android:hint="@string/username"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/sign_up_text_input_layout_username"
                >

                <EditText
                    android:id="@+id/sign_up_edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:ems="10" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignLeft="@id/sign_up_text_input_layout_password"
                android:layout_alignStart="@id/sign_up_text_input_layout_password"
                android:layout_alignRight="@id/sign_up_text_input_layout_password"
                android:layout_alignEnd="@id/sign_up_text_input_layout_password"
                android:layout_below="@id/sign_up_text_input_layout_password"

                android:text="@string/sign_up"/>

        </RelativeLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>