<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arvention.neoroutecollector.activity.SplashActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/neoroute_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/icon"
        android:layout_alignRight="@+id/icon"
        android:layout_alignStart="@+id/icon"
        android:layout_alignEnd="@+id/icon"
        android:layout_below="@+id/icon">

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPersonName"
            android:hint="@string/username"
            android:ems="10" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/text_input_layout_username"
        android:layout_alignStart="@+id/text_input_layout_username"
        android:layout_alignRight="@+id/text_input_layout_username"
        android:layout_alignEnd="@+id/text_input_layout_username"
        android:layout_below="@+id/text_input_layout_username">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignLeft="@+id/editTextName"
            android:layout_alignStart="@+id/editTextName"
            android:layout_alignRight="@+id/editTextName"
            android:layout_alignEnd="@+id/editTextName"
            android:layout_below="@+id/editTextName"

            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_lets_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/text_input_layout_password"
        android:layout_alignStart="@+id/text_input_layout_password"
        android:layout_alignRight="@+id/text_input_layout_password"
        android:layout_alignEnd="@+id/text_input_layout_password"
        android:layout_below="@+id/text_input_layout_password"

        android:text="@string/lets_go" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/button_lets_go"
        android:layout_alignStart="@+id/button_lets_go"
        android:layout_alignRight="@+id/button_lets_go"
        android:layout_alignEnd="@+id/button_lets_go"
        android:layout_alignParentBottom="true"

        android:text="@string/sign_in" />

</RelativeLayout>
